# tengu

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  FUTURE_ROADMAP.md  LICENSE  Makefile  README.md  SECURITY.md  autonomous_tengu.py  docker-compose.yml  drizzle.config.ts  eslint.config.mjs  note.md  package.json  pnpm-lock.yaml  pyproject.toml  tengu-demo-agente.cast  tengu.toml  tsconfig.json
.github/workflows/: ci.yml
docker/: entrypoint-agent.sh  entrypoint.sh  tengu.toml
docs/: api-reference.md  architecture.md  autonomous-agent.md  configuration-reference.md  contributing.md  demo-script.md  deployment-guide.md  hn-post.md  security-model.md  tengu-demo-claude-code.cast  tool-development-guide.md
scripts/: install-tools.sh  record-demo.sh  report-viewer.py
src/: app.controller.ts  app.module.ts  app.service.ts  env.d.ts  globals.d.ts  main.ts
src/common/decorators/: index.ts
src/common/guards/: auth.guard.ts
src/common/interceptor/: response.interceptor.ts
src/common/validators/: env.validation.ts
src/config/: app.config.ts
src/db/: index.ts  schema.ts
src/drizzle/: 0000_perpetual_microchip.sql  0001_easy_jackal.sql  0002_square_absorbing_man.sql  0003_silent_blue_shield.sql  0004_odd_slyde.sql  0005_daily_leopardon.sql
src/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
src/lib/: auth.lib.ts  types.ts
src/lib/logger/: index.ts  logger.module.ts
src/modules/academic-year/: academic-year.controller.spec.ts  academic-year.controller.ts  academic-year.module.ts  academic-year.service.spec.ts  academic-year.service.ts
src/modules/attendance/: attendance.module.ts
src/modules/class/: class.controller.ts  class.module.ts  class.service.ts
src/modules/entities/: academic-year.entity.ts  admin.entity.ts  class.entity.ts  index.ts  sections.entity.ts  student.entity.ts  user.entity.ts
src/modules/entity/: academic-year.entity.ts  class.entity.ts  sections.entity.ts  teachers.entity.ts  user.entity.ts
src/modules/users/: users.controller.ts  users.service.ts
src/tengu/: __init__.py  config.py  exceptions.py  server.py  types.py
src/tengu/executor/: __init__.py  base.py  process.py  registry.py
src/tengu/prompts/: ad_assessment.py  api_assessment.py  bug_bounty.py  compliance_assessment.py  container_assessment.py  osint_workflow.py  (+7 more)
tests/security/: test_command_injection.py
tests/unit/: test_allowlist.py  test_allowlist_extra.py  test_analysis.py  test_autonomous_agent.py  test_config.py  test_cve.py  test_cve_cache.py  test_cve_parsers.py  test_exceptions.py  test_executor_registry.py  test_prompt_resources.py  test_prompts.py  test_rate_limiter.py  test_sanitizer.py  test_security_audit.py  test_server.py  test_stealth_config.py  test_stealth_dns_privacy.py  test_stealth_http_client.py  test_stealth_layer.py  test_stealth_timing.py  test_stealth_user_agents.py  test_tools_ad.py  test_tools_aircrack.py  test_tools_analysis.py  test_tools_arjun.py  test_tools_bloodhound.py  test_tools_cewl.py  test_tools_check_anonymity.py  test_tools_checkov.py  test_tools_commix.py  test_tools_cors.py  test_tools_crlfuzz.py  test_tools_cve_tools.py  test_tools_dns.py  test_tools_dnstwist.py  test_tools_enum4linux.py  test_tools_exploit.py  test_tools_feroxbuster.py  test_tools_ffuf.py  (+37 more)
(+113 files in other folders)
