[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tengu"
version = "0.1.0"
description = "Tengu — Pentesting MCP Server: intelligent abstraction layer over security tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Tengu Contributors" }]

dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.7",
    "structlog>=24.0",
    "httpx>=0.27",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "sslyze>=6.0",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-aiofiles",
]
reporting = [
    "jinja2>=3.1",
    "weasyprint>=62.0",
]
metasploit = [
    "pymetasploit3>=1.0",
]

[project.scripts]
tengu = "tengu.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tengu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PTH", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
mypy_path = "src"
