[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tengu"
version = "0.2.1"
description = "Tengu — Pentesting MCP Server: intelligent abstraction layer over security tools"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Tengu Contributors" }]

dependencies = [
    "fastmcp>=2.0",
    "pydantic>=2.7",
    "structlog>=24.0",
    "httpx>=0.27",
    "dnspython>=2.6",
    "python-whois>=0.9",
    "sslyze>=6.0",
    "aiofiles>=24.0",
    "jinja2>=3.1",
    "markdown>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-aiofiles",
]
reporting = [
    "weasyprint>=62.0",
]
metasploit = [
    "pymetasploit3>=1.0",
]
agent = [
    "langgraph>=1.0",
    "mcp>=1.0",
    "anthropic>=0.40",
    "python-dotenv>=1.0",
]

[project.scripts]
tengu = "tengu.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tengu"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PTH", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
mypy_path = "src"
# Strict checks we enforce
warn_unused_configs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_reexport = true
strict_equality = true
# Not enabled — pre-existing violations, adopt incrementally:
# disallow_any_generics = true  # [type-arg]
# disallow_untyped_defs = true  # [no-untyped-def]
# warn_return_any = true        # [no-any-return]
